Vector accelerated GroupVInt decoder for MemorySegmentIndexInput